updating notebook examples

--- a/Module 1/1 Introduction.ipynb
+++ b/Module 1/1 Introduction.ipynb
@@ -49,13 +49,137 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "## Monte Carlo Hypothesis Testing\n",
+    "\n",
+    "The contingency table below shows results of patients who underwent cancer treatment and either saw their cancer controlled or not. The two treatments are surgery and radiation. The question we are interested in is *is there a difference between treatment and controll of cancer*?\n",
+    "\n",
+    "$H_0$: In the population, the two categorical variables are independent.\n",
+    "$H_A$: In the population, two categorical variables are dependent.\n",
+    "\n",
+    "\n",
+    "## R Code:\n",
+    "\n",
+    "```{r}\n",
+    "    study = matrix(data = c(21, 2,\n",
+    "                            15, 3), nrow = 2, ncol = 2, byrow = TRUE,\n",
+    "                   dimnames = list(c(\"surgery\", \"radiation\"),\n",
+    "                                   c(\"controlled\", \"not controlled\")))\n",
+    "\n",
+    "    print(study)\n",
+    "```\n",
+    "\n",
+    "\n",
+    "A Chi-squared test would usually be used for this type of analyses.\n",
+    "\n",
+    "\n",
+    "## Monte Carlo Hypothesis Testing, pt. 2 { .selectable }\n",
+    "\n",
+    "There are two ways that the Chi-squared test is used:\n",
+    "\n",
+    "1. to test the *Goodness of fit* of the theoretical distribution to the observations\n",
+    "\n",
+    "2. testing for *independence* between different factors\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\chi^2 = \\sum (O - E)^2 \\big/ E\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "To review the Chi-squared test and its assumptions, follow the [*link*](https://en.wikipedia.org/wiki/Pearson%27s_chi-squared_test#Assumptions)\n",
+    "\n",
+    "\n",
+    "## Monte Carlo Hypothesis Testing, pt. 3\n",
+    "\n",
+    "A disadvantage of the Chi-squared test is that it requires a sufficient sample size in order for the chi-square approximation to be valid. When cell counts are low, say, below 5, asymptotic properties do not hold well. Therefore, a simple Chi-squred test may report an invalid *p*-value which would increase a [Type I error](http://support.minitab.com/en-us/minitab/17/topic-library/basic-statistics-and-graphs/hypothesis-tests/basics/type-i-and-type-ii-error/) rate.\n",
+    "\n",
+    "\n",
+    "In order to use Monte Carlo methods to solve this problem, we'll first need to set up some functions in `R`. We'll set up some code to generate our Chi-squared statistic and Monte Carlo *p*-value.\n",
+    "\n",
+    "\n",
+    "\n",
+    "```{r, echo=TRUE}\n",
+    "    ## set up\n",
+    "\n",
+    "    ## function will generate chi-squared statistics\n",
+    "    ## using the expected distribution of the data\n",
+    "    simulateChisq <- function(B, E, sr, sc){\n",
+    "        results = numeric(B)\n",
+    "        for(i in 1:B){\n",
+    "          ## review r2dtable documentation\n",
+    "            dat = unlist(r2dtable(1, sr, sc)) ## simulated contingency table\n",
+    "            M = matrix(dat, ncol = length(sc), nrow = length(sr))\n",
+    "            val = sum( sort( (M - E)^2 / E, decreasing = TRUE))\n",
+    "            results[i] = val\n",
+    "        }\n",
+    "        return(results)\n",
+    "    }\n",
+    "\n",
+    "```\n",
+    "\n",
+    "- [`r2dtable`](https://stat.ethz.ch/R-manual/R-devel/library/stats/html/r2dtable.html)\n",
+    "\n",
+    "- [Random generation of a table ](http://people.sc.fsu.edu/~jburkardt/f_src/asa159/asa159.html)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Monte Carlo Hypothesis Testing, pt. 5 \n",
+    "\n",
+    "\n",
+    "```{r, echo=TRUE}\n",
+    "    ChisqTest <- function(data, Simulations){\n",
+    "        x = data ## data\n",
+    "        B = Simulations ## number of simulations to generate\n",
+    "        n <- sum(x) ## total number of observations\n",
+    "        sr <- rowSums(x) ## sum of rows\n",
+    "        sc <- colSums(x) ## sum of cols\n",
+    "        E <- outer(sr, sc, \"*\")/n ## ORDER MATTERS\n",
+    "        dimnames(E) <- dimnames(study)\n",
+    "        tmp <- simulateChisq(B, E, sr, sc) ## simulated data\n",
+    "        Stat <- sum(sort((x - E)^2/E, decreasing = TRUE)) ## chi^2 statistic\n",
+    "        pval <- (1 + sum(tmp >=  Stat))/(B + 1) ## MC pvalue\n",
+    "        rawPVal = pchisq(q = Stat, df = 2, lower.tail = FALSE)\n",
+    "        out = list(PearsonStat = Stat,\n",
+    "                   MonteCarloPVal = pval,\n",
+    "                   rawPVal = rawPVal)\n",
+    "        return(out)\n",
+    "    }\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Monte Carlo Hypothesis Testing, pt. 6 \n",
+    "\n",
+    "We then generate our test statistics.\n",
+    "\n",
+    "```{r}\n",
+    "\n",
+    "    #set.seed(123)\n",
+    "\n",
+    "    results <- ChisqTest(study, 10000)\n",
+    "\n",
+    "    print(results)\n",
+    "\n",
+    "    ## compare against chisq.test()\n",
+    "\n",
+    "```\n",
+    "\n",
+    "## Monte Carlo Hypothesis Testing, pt. 7 \n",
+    "\n",
+    "Our conclusion for the analysis is to accept (or fail to reject) the null hypothesis. We can conclude that treatment and control of cancer has some dependence/correlation.\n",
+    "\n",
+    "You should compare these results against `R`'s `chisq.test` function.\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -105,7 +229,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
