--- a/Module 3/notebook/3 Monte Carlo Integration.ipynb
+++ b/Module 3/notebook/3 Monte Carlo Integration.ipynb
@@ -541,18 +541,7 @@
     "##  Normal p-value estimate for unbounded region\n",
     "\n",
     "\n",
-    "Suppose we'd like to calculate $\\Phi(2.5) = P(X \\leq 2.5)$\n",
-    "\n",
-    "```{r}\n",
-    "N = 10000\n",
-    "x = 2.5\n",
-    "t = runif(N, 0, 2.5)\n",
-    "p = 0.5 + 1/sqrt(2*pi) * mean(x * exp(-t^2 / 2))\n",
-    "\n",
-    "print(p)\n",
-    "print(x = pnorm(q = 2.5, lower.tail = TRUE))\n",
-    "\n",
-    "```\n"
+    "Suppose we'd like to calculate $\\Phi(2.5) = P(X \\leq 2.5)$\n"
    ]
   },
   {
