moving prereqs script to another location and updating for relative paths for import

--- a/Module 4/notebook/4 Controlling and Accelerating Convergence.ipynb
+++ b/Module 4/notebook/4 Controlling and Accelerating Convergence.ipynb
@@ -18,6 +18,8 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"../../PythonScripts\") ## enter the path where you placed any scripts you'd like to load\n",
     "from prereqs import * ## imports wrapper functions such as plot, hist, and summary"
    ]
   },
@@ -421,7 +423,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## bootstrap\n",
