updating relative paths of imports

--- a/Module 5/notebook/5 Monte Carlo EM.ipynb
+++ b/Module 5/notebook/5 Monte Carlo EM.ipynb
@@ -25,7 +25,9 @@
     }
    ],
    "source": [
-    "from prereqs import *"
+    "import sys\n",
+    "sys.path.append(\"../../PythonScripts\") ## enter the path where you placed any scripts you'd like to load\n",
+    "from prereqs import * ## imports wrapper functions such as plot, hist, and summary"
    ]
   },
   {
@@ -648,27 +650,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "M = 10\n",
-    "N = 100\n",
-    "mu_new = wbar\n",
-    "results = numeric(N)\n",
-    "for(i in 1:N){\n",
-    "    results[i] = mu_new\n",
-    "    mu_old = mu_new\n",
-    "    ## abs(N(0,1)) + mu_old + (c - mu_old) to *approximate*\n",
-    "    ## the truncated samples we need\n",
-    "    Z = matrix(data = (c - mu_old) + (mu_old +  abs(rnorm(n = r*M, mean = 0, sd = 1))), \n",
-    "        nrow = r, ncol = M)\n",
-    "    mu_new = (m*wbar/n) + mean(colMeans(Z))*r/n\n",
-    "    M = M + 1\n",
-    "}"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rnorm = np.random.normal\n",
