--- a/Module 7/notebook/7 Gibbs Samplers.ipynb
+++ b/Module 7/notebook/7 Gibbs Samplers.ipynb
@@ -146,7 +146,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "MVN[0, :] = [mu_x, mu_y]\n",
@@ -295,7 +297,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "N = 10**6\n",
@@ -477,310 +481,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "## Bayesian Change-Point Analysis \n",
-    "\n",
-    "\n",
-    "Let's try to model a more interesting example, a time series of recorded coal mining disasters in the UK from 1851 to 1962, for $n = 111$ years of data. \n",
-    "This analysis will follow the analysis layed out by Carlin et al in [Hierarchical Bayesian Analysis of Changepoint Problems](http://www.webpages.uidaho.edu/~stevel/565/literature/bayes_changepoint_poisson_1.pdf). \n",
-    "Occurrences of disasters in the time series is thought to be derived from a Poisson process with a drop rate parameter in the later part of the time series. We are interested in locating the change point, $k$, in the series.\n",
-    "\n",
-    "\n",
-    "\n",
-    "[Change Point Detection](https://en.wikipedia.org/wiki/Change_detection)\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Bayesian Change-Point Analysis \n",
-    "\n",
-    "\n",
-    "```{r, fig.height=3, fig.width=5}\n",
-    "data_vector = c(4, 5, 4, 0, 1, 4, 3, 4, 0, 6, 3, 3, 4, 0, 2, 6, \n",
-    "                3, 3, 5, 4, 5, 3, 1, 4, 4, 1, 5, 5, 3, 4, 2, 5,\n",
-    "                2, 2, 3, 4, 2, 1, 3, 2, 2, 1, 1, 1, 1, 3, 0, 0, \n",
-    "                1, 0, 1, 1, 0, 0, 3, 1, 0, 3, 2, 2, 0, 1, 1, 1,\n",
-    "                0, 1, 0, 1, 0, 0, 0, 2, 1, 0, 0, 0, 1, 1, 0, 2, \n",
-    "                3, 3, 1, 1, 2, 1, 1, 1, 1, 2, 4, 2, 0, 0, 1, 4,\n",
-    "                0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1)\n",
-    "n = length(data_vector)\n",
-    "disasters = ts(data_vector, freq=1, start = 1851)\n",
-    "plot(disasters, type = \"h\", lty = 6, lwd = 2, main = \"Coal Mining Disasters\", xlab = \"Year\", ylab = \"Disasters\")\n",
-    "\n",
-    "```\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Bayesian Change-Point Analysis \n",
-    "\n",
-    "We are going to use Poisson random variables for this type of count data. Denoting year $i$'s accident count by $y_i$,\n",
-    "$$\n",
-    "y_i \\sim \\text{Poisson}(\\Lambda)\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "\n",
-    "The modeling problem revolves around estimating the values of the $\\lambda$ parameters. \n",
-    "Looking at the time series above, it appears that the rate declines later in the time series.\n",
-    "A changepoint model identifies a point (year) during the observation period ($k$) after which the \n",
-    "parameter $\\lambda$ drops to a lower value. So we are estimating two $\\lambda$ parameters: \n",
-    "one for the early period and another for the late period.\n",
-    "\n",
-    "$$\n",
-    "\\Lambda = \n",
-    "\\begin{cases}\n",
-    "\\theta  \\text{ if } i < k \\\\\n",
-    "\\lambda  \\text{ if } i \\geq k \\\\\n",
-    "\\end{cases}\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Bayesian Change-Point Analysis \n",
-    "\n",
-    "We need to assign prior probabilities to both $\\theta$ and $\\lambda$ parameters. \n",
-    "The gamma distribution not only provides a continuous density function for positive numbers, \n",
-    "but it is also conjugate with the Poisson sampling distribution.\n",
-    "\n",
-    "\n",
-    "We will specify suitably vague hyperparameters, letting $\\alpha = 1$ and allowing $\\beta$s to vary.\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "&\\theta \\sim \\text{Gamma}( 1, b_1 ) \\\\\\\n",
-    "&\\lambda \\sim \\text{Gamma}( 1, b_2 )\n",
-    "\\end{aligned}\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "## Bayesian Change-Point Analysis \n",
-    "\n",
-    "Since we do not have any intuition about the location of the changepoint (prior to viewing the data), we will assign a discrete uniform prior over all years 1851-1962.\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "\\ & k \\sim \\text{Unif(1851,1962) }\\\\\\\\\n",
-    "\\ & \\Rightarrow p( K = k ) = \\frac{1}{111}\n",
-    "\\end{aligned}\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "## Implementing Gibbs sampling  \n",
-    "\n",
-    "We are interested in estimating the joint posterior of $\\theta, \\lambda$ and $k$ given the array of annnual disaster counts $\\mathbf{y}$. This gives:\n",
-    "$$\n",
-    "p( \\theta, \\lambda, k | \\mathbf{y} ) \\propto p(\\mathbf{y} | \\theta, \\lambda, k ) p(\\theta, \\lambda, k) \n",
-    "$$\n",
-    "\n",
-    "To employ Gibbs sampling, we need to factor the joint posterior into the product of conditional expressions:\n",
-    "\n",
-    "$$\n",
-    "\\displaystyle p( \\theta, \\lambda, k | \\mathbf{y} ) \\propto p(y_{i < k} | \\theta, k) p(y_{i \\geq k} | \\lambda, k) p(\\theta) p(\\lambda) p(k)\n",
-    "$$\n",
-    "\n",
-    "which we have specified as:\n",
-    "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "p( \\theta, \\lambda, k | \\mathbf{y} ) & \\propto \\left[\\prod_{t=1851}^{k} \\text{Poisson}(y_i|\\theta) \\times \\prod_{t=k+1}^{1962} \\text{Poisson}(y_i|\\lambda) \\right] \\times \\text{Gamma}(\\theta|\\alpha,\\beta) \\times \\text{Gamma}(\\lambda|\\alpha, \\beta) \\frac{1}{111} \\\\\n",
-    "\\ & \\propto \\left[\\prod_{t=1851}^{k} e^{-\\theta}\\theta^{y_i} \\prod_{t=k+1}^{1962} e^{-\\lambda} \\lambda^{y_i} \\right] \\theta^{\\alpha-1} e^{-\\beta\\theta} \\lambda^{\\alpha-1} e^{-\\beta\\lambda} \\\\\n",
-    "\\ & \\propto \\theta^{\\sum_{t=1851}^{k} y_i +\\alpha-1} e^{-(\\beta+k)\\theta} \\lambda^{\\sum_{t=k+1}^{1962} y_i + \\alpha-1} e^{-\\beta\\lambda}\n",
-    "\\end{aligned}\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "## Implementing Gibbs sampling  \n",
-    "\n",
-    "So, the full conditionals are known, and critically for Gibbs, can easily be sampled from.\n",
-    "$$\n",
-    "\\theta \\sim \\text{Gamma} \\left(\\sum_{t=1851}^{k} y_i +\\alpha, k+\\beta \\right)\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "\n",
-    "$$\n",
-    "\\lambda \\sim \\text{Gamma} \\left(\\sum_{t=k+1}^{1962} y_i + \\alpha, 1962-k+\\beta \\right)\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "p(k | \\mathbf{y}, \\theta, \\lambda, b_1, b_2) & = \\frac{L(\\mathbf{y} | \\theta, \\lambda, b_1, b_2) }{\\sum_{j=1}^n L(\\mathbf{y} | \\theta, \\lambda, b_1, b_2 ) }\n",
-    "\\end{aligned}\n",
-    "$$\n",
-    "where the likelihood is defined as\n",
-    "\n",
-    "$$\n",
-    "\\displaystyle L(\\mathbf{y} | \\theta, \\lambda, b_1, b_2) = e^{(\\lambda - \\theta)} \\left( \\frac{\\theta}{\\lambda} \\right)^{\\sum_1^k y_i}\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "## Implementing Gibbs sampling  \n",
-    "\n",
-    "```{r}\n",
-    "set.seed(123)\n",
-    "\n",
-    "y = data_vector\n",
-    "# Gibbs sampler for the coal mining change point\n",
-    "# initialization\n",
-    "n <- length(y) #length of the data\n",
-    "m <- 10^4 #length of the chain\n",
-    "\n",
-    "## vectors to hold data\n",
-    "theta <- numeric(m) \n",
-    "lambda <- numeric(m) \n",
-    "k <- numeric(m)\n",
-    "L <- numeric(n)\n",
-    "\n",
-    "## initial values\n",
-    "k[1] <- sample(1:n, 1) ## change-points\n",
-    "theta[1] <- 1\n",
-    "lambda[1] <- 1\n",
-    "a = 0.5\n",
-    "b1 <- 1\n",
-    "b2 <- 1\n",
-    "\n",
-    "```\n",
-    "\n",
-    "\n",
-    "## Implementing Gibbs sampling  \n",
-    "\n",
-    "The algorithm explained by Carlin et al is simple. For $t \\in \\{1, 2, ..., m \\}$\n",
-    "\n",
-    "1. Sample $\\displaystyle \\theta_t \\sim Gamma(a_1 + \\sum_1^{k} y_i, k_{t-1} + b_{1, t-1})$\n",
-    "\n",
-    "2. Sample $\\displaystyle \\lambda_t \\sim Gamma(a_2 + \\sum_{k+1}^n y_i, n - k_{t-1} + b_{2, t-1} )$\n",
-    "\n",
-    "3. Sample $\\displaystyle b_1 \\sim Gamma(a_1 + c_1, (\\theta_t + d_1))$\n",
-    "\n",
-    "4. Sample $\\displaystyle b_2 \\sim Gamma(a_2 + c_2, (\\lambda_t + d_2))$\n",
-    "\n",
-    "5. For $j \\in {1, ..., n}$ calculate $L(\\mathbf{y} | \\theta, \\lambda, b_1, b_2)$, from there you'll obtain $p(k | \\mathbf{y}, \\theta, \\lambda, b_1, b_2)$\n",
-    "\n",
-    "6. Sample $k_t \\sim p(k | \\mathbf{y}, \\theta, \\lambda, b_1, b_2)$\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Implementing Gibbs sampling  \n",
-    "\n",
-    "```{r}\n",
-    "\n",
-    "# run the Gibbs sampler\n",
-    "for (t in 2:m){\n",
-    "    kt <- k[t-1]\n",
-    "    #generate theta\n",
-    "    r <- a + sum(y[1:kt])\n",
-    "    theta[t] <- rgamma(1, shape = r, rate = kt + b1)\n",
-    "    #generate lambda\n",
-    "    if (kt + 1 > n){ \n",
-    "      r <- a + sum(y) \n",
-    "      }else{\n",
-    "        r <- a + sum(y[(kt+1):n])\n",
-    "      }\n",
-    "    lambda[t] <- rgamma(1, shape = r, rate = n - kt + b2)\n",
-    "    #generate b1 and b2\n",
-    "    b1 <- rgamma(1, shape = a, rate = theta[t]+1)\n",
-    "    b2 <- rgamma(1, shape = a, rate = lambda[t]+1)\n",
-    "\n",
-    "    for (j in 1:n) {\n",
-    "        L[j] <- exp((lambda[t] - theta[t]) * j) * \n",
-    "                (theta[t] / lambda[t])^sum(y[1:j])\n",
-    "    }\n",
-    "    L <- L / sum(L)\n",
-    "    #generate k from discrete distribution L on 1:n\n",
-    "    k[t] <- sample(1:n, prob=L, size=1)\n",
-    "}\n",
-    "\n",
-    "```\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Implementing Gibbs sampling  \n",
-    "\n",
-    "Set a burn-in of 1000 samples. We will use burn in to toss out \"poor\" samples from out Markov chain. Arguments for and against burn-in vary. Statisticians, Andrew Gelman ([Burn-in Man](http://andrewgelman.com/2008/09/06/burnin_man/)) and Charlie Geyer ([Burn-In](http://users.stat.umn.edu/~geyer/mcmc/burn.html)) provide some commentary on burn-in.\n",
-    "\n",
-    "```{r}\n",
-    "## set burn in\n",
-    "burn_in <- 1000\n",
-    "## will toss out first 1000 samples\n",
-    "\n",
-    "K <- k[burn_in:m]\n",
-    "\n",
-    "## mean\n",
-    "print(mean(K))\n",
-    "#[1] 39.935\n",
-    "\n",
-    "## mode\n",
-    "print(which.max(table(K)))\n",
-    "```\n",
-    "\n",
-    "\n",
-    "## Implementing Gibbs sampling  \n",
-    "\n",
-    "```{r}\n",
-    "plot(K, type=\"l\", col=\"gray\", main = \"Change-Point\",\n",
-    "     xlab=\"Iteration\", ylab = \"K\")\n",
-    "lines(1:length(K), cumsum(K) / (1:length(K)))\n",
-    "```\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Implementing Gibbs sampling  \n",
-    "\n",
-    "```{r}\n",
-    "print(mean(lambda[burn_in:m])) #[1] 0.9341033\n",
-    "print(mean(theta[burn_in:m])) #[1] 3.108575\n",
-    "\n",
-    "```\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Implementing Gibbs sampling  \n",
-    "\n",
-    "```{r, echo=FALSE, fig.height=4}\n",
-    "## Code for Figure 9.12 on page 276\n",
-    "# histograms from the Gibbs sampler output\n",
-    "par(mfrow=c(1,3))\n",
-    "\n",
-    "hist(theta[burn_in:m], main=\"\", xlab = expression(theta), \n",
-    "     col=\"gray\", border=\"white\",\n",
-    "     breaks = \"scott\", prob=TRUE) #theta posterior\n",
-    "\n",
-    "hist(lambda[burn_in:m], main=\"\", xlab = expression(lambda),\n",
-    "     col=\"gray\", border=\"white\",\n",
-    "     breaks = \"scott\", prob=TRUE) #lambda posterior\n",
-    "\n",
-    "hist(K, breaks=min(K):max(K), prob=TRUE, main=\"\",\n",
-    "     col=\"gray\", border=\"white\",\n",
-    "     xlab = \"k\")\n",
-    "\n",
-    "```\n",
-    "\n",
-    "\n",
-    "\n",
-    "Our analysis can be used to justify that the change point occurs at some range at the $41^{st}$ year, 1891, which is similar to other analyses cited by Carlin et al.\n",
-    "\n",
-    "\n",
-    "## Implementing Gibbs sampling  \n",
-    "\n",
-    "\n",
-    "```{r, eval=FALSE}\n",
-    "\n",
-    "hist(theta[burn_in:m], main=\"\", xlab = expression(mu), \n",
-    "     col=\"gray\", border=\"white\",\n",
-    "     breaks = \"scott\", prob=TRUE) #mu posterior\n",
-    "\n",
-    "hist(lambda[burn_in:m], main=\"\", xlab = expression(lambda),\n",
-    "     col=\"gray\", border=\"white\",\n",
-    "     breaks = \"scott\", prob=TRUE) #lambda posterior\n",
-    "\n",
-    "hist(K, breaks=min(K):max(K), prob=TRUE, main=\"\",\n",
-    "     col=\"gray\", border=\"white\",\n",
-    "     xlab = \"k\")\n",
-    "\n",
-    "```\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
